# support-brain-ai

./: .env.example  .gitignore  README.md  prompt.txt  pyproject.toml
scripts/: demo_chat.py  test_connection.py
src/: main.py
src/agent/: __init__.py
src/config/: __init__.py  app_config.py
src/eval/: __init__.py
src/gateway/: __init__.py
src/llm/: __init__.py  llm_service.py
src/memory/: __init__.py
src/model/: __init__.py  models.py
src/prompts/: __init__.py  prompt_virtual_assistance.py
src/support_brain/: __init__.py  config.py
src/support_brain/observability/: __init__.py
src/support_brain/pii/: __init__.py
src/support_brain/rag/: __init__.py
tests/: conftest.py  test_config.py  test_llm_service.py  test_models.py  test_prompts.py
